--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,4 +12,5 @@ environment:
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.16.0
-dependencies: {uuid: ^3.0.6}
+dependencies: {string_ext: ^0.2.0, uuid: ^3.0.6}
+
